--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css'>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
 <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
-<link rel='stylesheet' href='style2.css'>
+<link rel='stylesheet' href='style.css'>
 </head>
 <body>
   <div id="cursor"></div>
@@ -179,7 +179,7 @@ integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="ano
 integrity="sha512-VJ/iYbiu1eJ6yLimfTi65t2R9TFcG5D9X8ZCfbbEFhTfPnKJh8byoKXEawi5ScJZBYL1eiirL1+MczZDx0Tz9Q=="
 crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="https://unpkg.com/textillate@0.4.1/jquery.textillate.js"></script>
-<script src='script2.js'></script>
+<script src='script.js'></script>
 
 </body>
 </html>
